--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -25,18 +25,9 @@ builds:
 
 archives:
     - id: ytrss-archive
-      format: tar.gz
-      name_template: >-
-          {{ .ProjectName }}_
-          {{- .Version }}_
-          {{- .Os }}_
-          {{- .Arch }}
-      format_overrides:
-          - goos: windows
-            format: zip
-      files:
-          - README.md
-          - LICENSE*
+      formats:
+          - tar.gz
+          - zip
 
 checksum:
     name_template: "checksums.txt"
